2006-11-26 [paul]	2.6.0cvs62

	* src/addr_compl.c
	* src/addressbook.c
	* src/browseldap.c
		replace deprecated gtk_idle_... functions

2006-11-26 [paul]	2.6.0cvs61

	* src/compose.c
	* src/folderview.c
	* src/inc.c
	* src/summaryview.c
	* src/gtk/gtkvscrollbutton.c
	* src/gtk/quicksearch.c
	* src/plugins/pgpcore/passphrase.c
		replace deprecated gtk_timeout_add and
		gtk_timeout_remove

2006-11-26 [paul]	2.6.0cvs60

	* src/compose.c
		fix bug that caused the wrong recipient
		to be selected when replying to a msg
		which is From one of our accounts to
		another of our accounts

2006-11-25 [paul]	2.6.0cvs59

	* src/summaryview.c
		don't change the From column title to
		To if the To column is visible

2006-11-24 [paul]	2.6.0cvs58

	* src/compose.c
		fix bug 1069, 'Sent mails disappear, BCC
		or locking problem?'

2006-11-21 [wwp]	2.6.0cvs57

	* src/compose.c
		fix spelling menu when replying (same as 2.3.1cvs39):
		discrepancy between context menu and top menu when
		folder's dictionary isn't the default one.

2006-11-19 [paul]	2.6.0cvs56

	* src/summaryview.c
		obey always_show_msg option when
		marking as spam
	* src/plugins/bogofilter/bogofilter.c
		fix typo

2006-11-18 [paul]	2.6.0cvs55

	* AUTHORS
	* README
	* debian/copyright
	* manual/ack.xml
	* manual/es/ack.xml
	* manual/fr/ack.xml
	* manual/pl/ack.xml
	* src/gtk/authors.h
	* src/gtk/icon_legend.c
	* src/gtk/icon_legend.h
	* tools/OOo2claws-mail.pl
	* tools/README
	* tools/acroread2claws-mail.pl
	* tools/claws.i18n.status.pl
	* tools/filter_conv.pl
	* tools/filter_conv_new.pl
	* tools/freshmeat_search.pl
	* tools/google_search.pl
	* tools/kmail2claws-mail.pl
	* tools/kmail2claws-mail_v2.pl
	* tools/maildir2claws-mail.pl
	* tools/make.themes.project
	* tools/multiwebsearch.pl
	* tools/outlook2claws-mail.pl
	* tools/tb2claws-mail
	* tools/kdeservicemenu/README
	* tools/kdeservicemenu/claws-mail-kdeservicemenu.pl
		update mine and wwp's email addresses in
		several places
		Patch by wwp