@@ -2087,3 +2087,4 @@
 ( cvs diff -u -r 1.382.2.334 -r 1.382.2.335 src/compose.c;  ) > 2.6.0cvs60.patchset
 ( cvs diff -u -r 1.382.2.335 -r 1.382.2.336 src/compose.c;  cvs diff -u -r 1.207.2.134 -r 1.207.2.135 src/folderview.c;  cvs diff -u -r 1.149.2.62 -r 1.149.2.63 src/inc.c;  cvs diff -u -r 1.395.2.268 -r 1.395.2.269 src/summaryview.c;  cvs diff -u -r 1.5.2.4 -r 1.5.2.5 src/gtk/gtkvscrollbutton.c;  cvs diff -u -r 1.1.2.51 -r 1.1.2.52 src/gtk/quicksearch.c;  cvs diff -u -r 1.1.2.20 -r 1.1.2.21 src/plugins/pgpcore/passphrase.c;  ) > 2.6.0cvs61.patchset
 ( cvs diff -u -r 1.27.2.24 -r 1.27.2.25 src/addr_compl.c;  cvs diff -u -r 1.60.2.69 -r 1.60.2.70 src/addressbook.c;  cvs diff -u -r 1.2.4.13 -r 1.2.4.14 src/browseldap.c;  ) > 2.6.0cvs62.patchset
+( cvs diff -u -r 1.1.4.20 -r 1.1.4.21 src/expldifdlg.c;  cvs diff -u -r 1.207.2.135 -r 1.207.2.136 src/folderview.c;  cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/image_viewer.c;  cvs diff -u -r 1.274.2.156 -r 1.274.2.157 src/mainwindow.c;  cvs diff -u -r 1.5.2.42 -r 1.5.2.43 src/gtk/gtkutils.c;  cvs diff -u -r 1.5.2.5 -r 1.5.2.6 src/gtk/gtkvscrollbutton.c;  cvs diff -u -r 1.12.2.29 -r 1.12.2.30 src/gtk/prefswindow.c;  cvs diff -u -r 1.1.2.14 -r 1.1.2.15 src/plugins/pgpcore/prefs_gpg.c;  ) > 2.6.0cvs63.patchset
